Compiled the dashboard using npm run build, deleted dashboard folder, served the dashboard directly through the worker.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -17,7 +17,8 @@
     "crons": [
       "0 */6 * * *"
     ]
-  }
+  },
+  "assets": { "directory": "./public", "binding": "ASSETS" }
 	// "vars": {
 	//   "MY_VAR": "my-variable"
 	// },
